ISSUE_EU2: fix z-index in modal window

--- a/resources/css/framework/icons.styl
+++ b/resources/css/framework/icons.styl
@@ -1,7 +1,7 @@
 @font-face
   font-family: "icons"
-  src: url('../fonts/icons.eot?v=1556122548128')
-  src: url('../fonts/icons.eot?v=1556122548128?#iefix') format('eot'), url('../fonts/icons.woff?v=1556122548128') format('woff'), url('../fonts/icons.ttf?v=1556122548128') format('truetype')
+  src: url('../fonts/icons.eot?v=1556133726584')
+  src: url('../fonts/icons.eot?v=1556133726584?#iefix') format('eot'), url('../fonts/icons.woff?v=1556133726584') format('woff'), url('../fonts/icons.ttf?v=1556133726584') format('truetype')
   font-weight: 400
   font-style: normal
 
@@ -275,3 +275,4 @@
 
 .icon-loading-circle::before
     content: "\ea55"
+
